fixing grid width overlaping on testimonial, set padding of section with clamp()

--- a/mobile.css
+++ b/mobile.css
@@ -36,7 +36,7 @@
 
   section {
     /* display: block; */
-    padding: 100px 30px;
+    padding: 100px clamp(15px, 6vw, 30px);
   }
   section .container {
     width: 100%;
@@ -157,15 +157,19 @@
       "prev index next";
   }
 
+  .testimonials-slider .testimoni {
+    padding: 0;
+  }
+
   .testimoni-message {
     font-size: 1.6em;
   }
 
   .testimonials-slider button {
     width: 100%;
-    height: 100%;
+    height: 30px;
     padding: 0;
-    margin: 0;
+    margin: auto 0;
     background-size: contain !important;
   }
 
@@ -185,7 +189,6 @@
   /* Contact */
   #contact .container {
     display: grid;
-    grid-template-columns: 40% 60%;
     grid-template-rows: repeat(3, auto);
     grid-template-columns: 100%;
     grid-template-areas:
@@ -193,7 +196,7 @@
       "contact-form"
       "contact-info";
     gap: 60px;
-    padding: 0 40px;
+    padding: 0;
   }
 
   #contact .contact-info-right {
@@ -203,18 +206,16 @@
   #contact .contact-info-right .contact-info-list {
     flex-direction: column;
     gap: 35px;
-
-    & li {
-      width: 100%;
-      display: inline-flex;
-      align-items: center;
-      text-align: left;
-
-      & span {
-        margin: 0 20px 0 0;
-        padding: 16px;
-      }
-    }
+  }
+  #contact .contact-info-right .contact-info-list li {
+    width: 100%;
+    display: inline-flex;
+    align-items: center;
+    text-align: left;
+  }
+  #contact .contact-info-right .contact-info-list li span {
+    margin: 0 20px 0 0;
+    padding: 16px;
   }
 
   footer .container {
@@ -222,22 +223,21 @@
     gap: 80px;
     align-items: center;
     padding: 0 40px;
+  }
+  footer .container .footer-left {
+    width: 100%;
+    flex-direction: column;
+    gap: 80px;
+    align-items: center;
+    text-align: center;
+  }
 
-    & .footer-left {
-      width: 100%;
-      flex-direction: column;
-      gap: 80px;
-      align-items: center;
-      text-align: center;
-    }
+  footer .container .footer-right {
+    width: 100%;
+    gap: 80px;
+  }
 
-    & .footer-right {
-      width: 100%;
-      gap: 80px;
-    }
-
-    & .footer-right * {
-      margin: 0 auto;
-    }
+  footer .container .footer-right * {
+    margin: 0 auto;
   }
 }
